--- a/Zoo/Zoo/Base.lproj/Main.storyboard
+++ b/Zoo/Zoo/Base.lproj/Main.storyboard
@@ -34,54 +34,18 @@
             <objects>
                 <viewController storyboardIdentifier="scoreView" id="3p9-Ec-Tqi" customClass="ScoreViewController" customModule="Zoo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="fWo-DY-pkN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QBD-3o-G5e">
-                                <rect key="frame" x="0.0" y="400" width="375" height="800"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q3r-hk-nsF">
-                                        <rect key="frame" x="25" y="44" width="61" height="41"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                        <state key="normal" title="Back"/>
-                                        <connections>
-                                            <segue destination="UD3-zU-igA" kind="showDetail" id="qBd-kt-fFh"/>
-                                        </connections>
-                                    </button>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WSp-9l-A2P">
-                                        <rect key="frame" x="0.0" y="116" width="446" height="684"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </tableView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="800" id="Av5-al-mEV"/>
-                                    <constraint firstAttribute="width" constant="600" id="XBc-N7-byJ"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="600" id="f7C-uR-fe1"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="QBD-3o-G5e" firstAttribute="leading" secondItem="2KU-YB-px6" secondAttribute="leading" id="3vh-9M-2BK"/>
-                            <constraint firstItem="QBD-3o-G5e" firstAttribute="trailing" secondItem="2KU-YB-px6" secondAttribute="trailing" id="56v-de-nfq"/>
-                            <constraint firstItem="QBD-3o-G5e" firstAttribute="top" secondItem="fWo-DY-pkN" secondAttribute="top" id="ByR-dA-CDj"/>
-                            <constraint firstItem="QBD-3o-G5e" firstAttribute="bottom" secondItem="2KU-YB-px6" secondAttribute="bottom" id="Jhy-48-HvH"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="2KU-YB-px6"/>
                     </view>
                     <navigationItem key="navigationItem" id="VO0-WX-Kfa"/>
                     <value key="contentSizeForViewInPopover" type="size" width="600" height="600"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="1200"/>
-                    <connections>
-                        <outlet property="foreground" destination="QBD-3o-G5e" id="rpi-6K-S0L"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGB-ei-G25" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1792.8" y="-360.71964017991007"/>
+            <point key="canvasLocation" x="1014" y="-937"/>
         </scene>
         <!--Booo Yaa-->
         <scene sceneID="wnV-bF-gYt">
